test/udt-undefined-constructor.err.expect
test/udt-undefined-constructor.ktn:5:3: error: undefined constructor 'Undefined'
