test/udt-undefined-constructor.ktn
data Defined:
  case Defined

match (Defined_Defined):
  case Undefined {}
